# deployment_masterclass

./: .gitlab-ci.yml  .isort.cfg  README.md  setup.cfg  setup.py
notebooks/: Run Model.ipynb
src/case_regression_example/: cleaning.py  loader.py  model.py
tests/: test_cleaning.py  test_loader.py
