[metadata]
name = case_regression_example
description = Toy project to try and predict cases by sample date from cases by report date"
author = Faculty
author-email = info@faculty.ai
url = https://faculty.ai/

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires = setuptools_scm
package_dir =
    =src
# Add here dependencies of your project (semicolon/line-separated), e.g.
# install_requires =
#     pandas


[options.packages.find]
where = src
exclude =
    tests

# Additional install requirements for running tests
[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-mock
linting =
    black==21.5b1

[tool:pytest]
# Options for py.test:
addopts =
    --cov case_regression_example --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
testpaths = tests

[tool.setuptools_scm]
version_scheme = guess-next-dev

[bdist_wheel]
universal = 1

[flake8]
ignore = E203 W503 W291 W293
max-line-length = 79
exclude =
    dist
    .eggs
